# smoothwebview

./: .gitignore  CMakeLists.txt  INSTALL  Messages.sh  README  plasma-applet-smoothwebview.desktop  smoothwebview.cpp  smoothwebview.h  smoothwebviewconfig.ui
